Финальная реализация