@@ -2,11 +2,13 @@ package dev.struchkov.yandex.report.repository.impl;
 
 import dev.struchkov.yandex.report.domain.MonthData;
 import dev.struchkov.yandex.report.repository.MonthRepository;
-import dev.struchkov.yandex.report.utils.MonthKey;
+import dev.struchkov.yandex.report.utils.YearAndMonth;
 
 import java.time.Month;
 import java.time.Year;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -15,11 +17,13 @@ import java.util.stream.Collectors;
 
 public class MonthRepositoryImpl implements MonthRepository {
 
-    private final Map<MonthKey, MonthData> map = new HashMap<>();
+    private final Map<YearAndMonth, List<MonthData>> map = new HashMap<>();
 
     @Override
     public MonthData save(MonthData monthData) {
-        map.put(monthData.getMontKey(), monthData);
+        final YearAndMonth key = monthData.getYearAndMonth();
+        map.computeIfAbsent(key, k-> new ArrayList<>());
+        map.get(key).add(monthData);
         return monthData;
     }
 
@@ -27,33 +31,36 @@ public class MonthRepositoryImpl implements MonthRepository {
     public List<MonthData> saveAll(Collection<MonthData> collection) {
         return collection.stream()
                 .map(this::save)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<MonthData> findAll() {
-        return map.values().stream().toList();
+        return map.values().stream()
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<MonthData> findAllByYearAndMonth(Year year, Month month) {
-        return map.keySet().stream()
-                .filter(monthKey -> monthKey.getYear().equals(year) && monthKey.getMonth().equals(month))
-                .map(map::get)
-                .toList();
+        final YearAndMonth key = new YearAndMonth(year, month);
+        if (map.containsKey(key)) {
+            return map.get(key);
+        }
+        return Collections.emptyList();
     }
 
     @Override
     public Map<Year, Set<Month>> findAllYear() {
         return map.keySet().stream()
-                .collect(Collectors.groupingBy(MonthKey::getYear, Collectors.toSet()))
+                .collect(Collectors.groupingBy(YearAndMonth::getYear, Collectors.toSet()))
                 .entrySet()
                 .stream()
                 .collect(
                         Collectors.toMap(
                                 Map.Entry::getKey,
                                 e -> e.getValue().stream()
-                                        .map(MonthKey::getMonth)
+                                        .map(YearAndMonth::getMonth)
                                         .collect(Collectors.toUnmodifiableSet())
                         )
                 );
@@ -64,7 +71,13 @@ public class MonthRepositoryImpl implements MonthRepository {
         return map.entrySet().stream()
                 .filter(e -> year.equals(e.getKey().getYear()))
                 .map(Map.Entry::getValue)
-                .toList();
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public void clear(Year year, Month month) {
+        map.remove(new YearAndMonth(year, month));
     }
 
 }
